hard-gists/5860853/run.log
=== Docker Run Log for 5860853 ===
Started at: Mi 29. Okt 16:07:33 CET 2025

[2025-10-29 16:07:33] START: Running container for 5860853
[2025-10-29 16:07:33] SUCCESS: Container ef00f1d6f04f8fc099eb3b73791776c3c5526c6ab1debedb037e51dcce16c001 started for 5860853
=== Container logs for 5860853 ===
  File "/snippet.py", line 7
    print 'entered HistogramImage'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5860853 ===
[2025-10-29 16:07:35] INFO: Container ef00f1d6f04f8fc099eb3b73791776c3c5526c6ab1debedb037e51dcce16c001 has stopped
